--- a/productos/Templates/base.html
+++ b/productos/Templates/base.html
@@ -405,11 +405,17 @@
         <div class="nav-container">
             <a href="{% url 'productos:inicio' %}" class="logo">TIENDA DE JULIAN</a>
             <ul class="nav-menu">
-                <li><a href="{% url 'productos:inicio' %}" class="nav-link {% if request.resolver_match.url_name == 'inicio' %}active{% endif %}">Inicio</a></li>
-                <li><a href="{% url 'productos:buscar_producto' %}" class="nav-link {% if request.resolver_match.url_name == 'buscar_producto' %}active{% endif %}">Buscar</a></li>
-                <li><a href="{% url 'productos:crear_producto' %}" class="nav-link {% if request.resolver_match.url_name == 'crear_producto' %}active{% endif %}">Crear</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'productos:inicio' %}" class="nav-link {% if request.resolver_match.url_name == 'inicio' %}active{% endif %}">Inicio</a></li>
+                    <li><a href="{% url 'productos:buscar_producto' %}" class="nav-link {% if request.resolver_match.url_name == 'buscar_producto' %}active{% endif %}">Buscar</a></li>
+                    <li><a href="{% url 'productos:crear_producto' %}" class="nav-link {% if request.resolver_match.url_name == 'crear_producto' %}active{% endif %}">Crear</a></li>
+                    <li><a href="{% url 'accounts:logout' %}" class="nav-link">Cerrar Sesión</a></li>
+                {% else %}
+                    <li><a href="{% url 'accounts:login' %}" class="nav-link {% if request.resolver_match.url_name == 'login' %}active{% endif %}">Iniciar Sesión</a></li>
+                    <li><a href="{% url 'accounts:register' %}" class="nav-link {% if request.resolver_match.url_name == 'register' %}active{% endif %}">Registrarse</a></li>
+                {% endif %}
             </ul>
-        </div>
+</div>
     </nav>
 
     <main class="main-content">
